Cuarto commit Proyecto blog tire

--- a/explosion.html
+++ b/explosion.html
@@ -27,7 +27,117 @@
             </section>
         </nav>
     </header>
-    
+    <main>
+        <section class="section-gemelado-container">
+            <div class="info-container">
+                <div class="section-gemelado-img-container">
+                    <img src="./assents/tireExplosion.webp" alt="Imagen de un camión minero">
+                </div>
+                <div class="section-gemelado-info-container">
+                    <p>Conoce que es un reventón y explosión de una neumático gigante, causas que lo originan.</p>
+                    <p>Recomendaciones para evitar accidentes relacionados con una explosión.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section-cards-container-reventon">
+            <h2>Reventones</h2>
+            <div class="cards-container grid-container">
+                <div class="cards-info">
+                    <img src="./assents/captura.png" alt="imagen de un icono de conocimiento">
+                    <p class="cards-header"><strong>Conocimiento</strong></p>
+                    <p>Los reventones, explosiones e incendios de neumáticos son muy <strong class="text-danger">peligrosos</strong>.</p>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/neumatico-desinflado (3).png" alt="imagen de un icono de reventon de neumático">
+                    <p class="cards-header"><strong>Reventón</strong></p>
+                    <p>Un reventon se describe como la liberación de energía, causada por la ruptura de la carcasa debido a cortes, penetraciones, impactos y separaciones.</p>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/advertencia.png" alt="imagen de un icono de advertencia">
+                    <p class="cards-header"><strong>Cosecuencias</strong></p>
+                    <p>Liberación de la presión del neumático (100 - 150 psi) pudiendo acasionar <strong class="text-danger">lesiones graves</strong>.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section-cards-container-reventon">
+            <h2>Explosiones</h2>
+            <div class="cards-container grid-container">
+                <div class="cards-info">
+                    <img src="./assents/explosion.png" alt="imagen de un icono de explosión">
+                    <p class="cards-header"><strong>Explosión</strong></p>
+                    <p>El termino explosión es utilizada para describir el proceso que se genera en un neumático. Neumáticos que experimentan una explosión química.</p>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/procesando.png" alt="imagen de un icono de conocimiento">
+                    <p class="cards-header"><strong>Iniciación</strong></p>
+                    <p>Existen dos procesos de iniciación de explosión de neumáticos:</p>
+                    <ol>
+                        <li><strong>Explosiones iniciadas por calor</strong> (caso más común)</li>
+                        <li><strong>Explosión iniciadas por difusión</strong> (caso extremadamente raro)</li>
+                    </ol>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/calefaccion.png" alt="imagen de un icono de temperatura">
+                    <p class="cards-header"><strong>1.Explosión iniciadas por calor</strong></p>
+                    <p><strong>Causas</strong></p>
+                    <ul>
+                        <li>Contacto con tormenta eléctrica</li>
+                        <li>Contacto con cables de alta tensión</li>
+                        <li>Soldar en el aro base con neumático a presión</li>
+                        <li>Incendio del equipo</li>
+                    </ul>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/analisis.png" alt="imagen de un icono de temperatura">
+                    <p class="cards-header"><strong>Proceso</strong></p>
+                    <ul>
+                        <li>Calor transmitido al interior del nemático (butilo)</li>
+                        <li>Contacto con cables de alta tensión</li>
+                        <li>Pirolisis del butilo <strong class="text-danger">(250 °C)</strong></li>
+                        <p>Esto es la descomposición de la goma, la cual libera gases inflamables.</p>
+                        <li>Auto encendido <strong class="text-danger">(400 °C)</strong></li>
+                    </ul>
+                </div>
+                <div class="cards-info">
+                    <img src="./assents/tabla-de-madera.png" alt="imagen de un icono de tabla de madera">
+                    <p class="cards-header"><strong>2.Explosión iniciada por difusión</strong></p>
+                    <p><strong>Causas</strong></p>
+                    <ul>
+                        <li>Madero dentro nuemático</li>
+                        <li>Esta libera metanol a <strong class="text-danger">(65 °C)</strong></li>
+                        <li>Fricción de la madera con  interior del neumático genera particulas de polvo combustibles que pude reaccionar con la mezcla de aire y metanol</li>
+                        <li>Auto encendido <strong class="text-danger">(< 65 °C)</strong></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="advertencia-container">
+                <h2>Recomendaciones de seguridad</h2>
+                    <div class="advertencia-image-container">
+                        
+                    </div>
+                    <div class="advertencia-container-info">
+                        <h3>Conceptos errados que evitarán una explosión en neumáticos</h3>
+                        <ol>
+                            <li>FALSO: Desinflar el neumático previene una explosión</li>
+                            <p>VERDAD: La presión no es requerida en el proceso de pirolisis.</p>
+                            <li>FALSO: Remover la fuente de energía/ignición elimina el riesgo de explosión</li>
+                            <p>VERDAD:  El caucho es un mal conductor de calor, y “puntos calientes” no detectados permanecerán así por un periodo significativo, una vez removida la fuente de calor externa, o incluso minutos u horas después de la exposición a una fuente potencial de ignición.</p>
+                            <li>FALSO: No existe riesgo de explosión si un neumático está inflado con nitrógeno.</li>
+                            <p>VERDAD:  Neumáticos inflados con nitrógeno han explotado. Esto se debe a que solo se requiere de una pequeña cantidad de oxígeno para generar combustión en condiciones explosivas. El aire puede ingresar al interior al momento de asentar los talones, o al “rellenar” la presión de inflado en terreno.</p>
+                        </ol>
+                        <h3>Prevención</h3>
+                        <ul>
+                            <li>Nunca caliente o suelde aros en un neumático ya montado, esté inflado o no.</li>
+                            <li>Utilice lubricantes y sellantes de neumático no inflamables.</li>
+                            <li>Retire todo objeto ajeno a los neumáticos, como por ejemplo, madera.</li>
+                            <li>Evite trabajar cerca de cables de alta tensión.</li>
+                            <li>Instale un Sistema de Monitoreo de Presión de Neumáticos (TPMS) para monitorear la temperatura y presión de los neumáticos.</li>
+                            <li>Reduzca los riesgos de incendio siguiendo los procedimientos de frenado adecuados y aislando o cambiando neumáticos con humo.</li>
+                        </ul>
+                    </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>© 2025 TIRE+. Todos los derechos reservados</p>
     </footer>
