--- a/gemelados.html
+++ b/gemelados.html
@@ -35,7 +35,7 @@
             </div>
             <div class="section-gemelado-info-container">
                 <p>Información técnica para la medición de cocada o goma remanente para el correcto gemelado de neumáticos gigantes.</p>
-                <p>Información para la correcta política de rotaciones de neumáticos gigantes</p>
+                <p>Política de rotaciones de neumáticos gigantes</p>
                 <p>La correcta aplicación de estas técnicas impactara positivamente en la vida útil de los neumáticos.</p>
             </div>
         </div>
