--- a/tkph.html
+++ b/tkph.html
@@ -27,7 +27,36 @@
             </section>
         </nav>
     </header>
-    
+    <main>
+        <section class="section-gemelado-container">
+            <div class="info-container">
+                <div class="section-gemelado-img-container">
+                    <img src="./assents/imagenTkph2.jpg" alt="Imagen de un camión minero">
+                </div>
+                <div class="section-gemelado-info-container">
+                    <p>Tonelada Kilómetro por Hora (TKPH).</p>
+                    <ul>
+                        <li>Esta es la capacidad de los neumáticos para realizar trabajo</li>
+                        <li>Esto está relacionado con la generación de calor en el compuesto del neumático.
+                        </li>
+                        <li>El calor destruye la adhesión de la goma y como resultado el neumático falla.
+                        </li>
+                        <li>Fabricantes de neumáticos especifican un TKPH para cada uno de sus especificaciones (construcción, diseño, compuesto) dentro de un tamaño de neumático.
+                        </li>
+                        <li>El TKPH de la faena tiene que ser menor que el TKPH del  neumático.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="section-formula-container">
+            <div class="formula-container">
+                <p>Fórmula</p>
+                <p>TKPH de operación</p>
+                <p class="formula">=Promedio de carga (Por rueda)  X  Velocidad promedio diaria de trabajo</p>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>© 2025 TIRE+. Todos los derechos reservados</p>
     </footer>
